--- a/index.html
+++ b/index.html
@@ -296,40 +296,40 @@
         </div>
       </div>
     </div>
-	    <div class="row">
+	<div class="row">
       <div class="col single-price">
         <div class="top-part">
           <h1 class="package-no">S1</h1>
           <h4>0900-1000</h4>
-          <p>Keynote</p>
+          <h5>Keynote by Steve J. Todd</h5>
         </div>
       </div>
       <div class="col single-price">
         <div class="top-part">
           <h1 class="package-no">S2</h1>
           <h4>1015-1215</h4>
-          <p>Security and Data Operations</p>
+          <h5>Security and Data Operations</h5>
         </div>
       </div>
       <div class="col single-price">
         <div class="top-part">
           <h1 class="package-no">S3</h1>
           <h4>1315-1400</h4>
-          <p>Keynote</p>
+          <h5>Keynote by Cormac J. Sreenan</h5>
         </div>
       </div>
       <div class="col single-price">
         <div class="top-part">
           <h1 class="package-no">S4</h1>
           <h4>1400-1500</h4>
-          <p>Posters</p>
+          <h5>Posters</h5>
         </div>
       </div>
       <div class="col single-price">
         <div class="top-part">
           <h1 class="package-no">S5</h1>
           <h4>1500-1700</h4>
-          <p>CEC Architectures & Resource Management</p>
+          <h5>CEC Architectures & Resource Management</h5>
         </div>
       </div>
     </div>
