--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
     <h5 class="text-gray text-center">0900-0910, Opening</h5>
 
-    <h5 class="text-gray text-center">0910-1000, Session I: Keynote</h5>
+    <h5 class="text-gray text-center" id="S1">0910-1000, Session 1: Keynote</h5>
     <p class="sample-text">
 	<b>Session Chair</b>: Dr. Ahmed Khalid <br>
 	<b>Title:</b> Project Alvarium and the Rise of Data Confidence Fabrics <br>
@@ -351,7 +351,7 @@
 	
 	<h5 class="text-gray text-center">1000-1015, Coffee Break</h5>
 
-    <h5 class="text-gray text-center">1015-1215, Session II: Security and Data Operations</h5>
+    <h5 class="text-gray text-center" id="S2">1015-1215, Session 2: Security and Data Operations</h5>
     <p class="sample-text"><b>Session Chair</b>: Dr. Raúl Gracia-Tinedo</p>
     <p class="sample-text">
 	<b>1015-1035</b>: Towards Trust-based Data Weighting in Machine Learning <br>
@@ -364,14 +364,14 @@
 
     <h5 class="text-gray text-center">1215-1315, Lunch Break</h5>
 
-    <h5 class="text-gray text-center">1315-1400, Session III: Keynote</h5>
+    <h5 class="text-gray text-center" id="S3">1315-1400, Session 3: Keynote</h5>
     <p class="sample-text">
 	<b>Session Chair</b>: Dr. Ahmed Khalid <br>
 	<b>Title:</b> Life on the Edge: Experiences with Enabling AI <br>
 	<b>Speaker:</b> Prof. Cormac J. Sreenan, University College Cork, Ireland
 	</p>
 
-    <h5 class="text-gray text-center">1400-1500, Session IV: Coffee Break & Posters</h5>
+    <h5 class="text-gray text-center" id="S4">1400-1500, Session 4: Coffee Break & Posters</h5>
     <p class="sample-text">
 	<b>NearData</b>: Extreme Near-Data Processing Platform <br>
 	<b>INTEND</b>: Intent-Based Data Operation In The Computing Continuum <br>
@@ -381,7 +381,7 @@
 	<b>CAMEO</b>: Creating an Architecture for Manipulating Earth Observation data
 	</p>
 
-    <h5 class="text-gray text-center">1500-1700, Session V: CEC Architectures & Resource Management </h5>
+    <h5 class="text-gray text-center" id="S5">1500-1700, Session 5: CEC Architectures & Resource Management </h5>
     <p class="sample-text"><b>Session Chair</b>: Alan Barnett</p>
     <p class="sample-text">
 	<b>1500-1520</b>: The Nanoservices Framework: Co-locating Microservices in the Cloud-Edge Continuum <br>
