--- a/index.html
+++ b/index.html
@@ -298,11 +298,13 @@
     </div>
 	<div class="row">
       <div class="col single-price">
+	    <a href="index.html#S1">
         <div class="top-part">
           <h1 class="package-no">S1</h1>
           <h4>0900-1000</h4>
           <h5>Keynote by Steve J. Todd</h5>
         </div>
+		</a>
       </div>
       <div class="col single-price">
         <div class="top-part">
