--- a/index.html
+++ b/index.html
@@ -287,51 +287,15 @@
   </div>
 </section>
 
-<section class="price-area section-gap" id="program">
+<section class="price-area section-gap">
+</section>
+
+<section class="price-area" id="program">
   <div class="container">
     <div class="row d-flex justify-content-center">
       <div class="menu-content pb-70 col-md-8">
         <div class="title text-center">
           <h1 class="mb-10">Workshop Program</h1>
-        </div>
-      </div>
-    </div>
-	<div class="row">
-      <div class="col single-price">
-	    <a href="index.html#S1">
-        <div class="top-part">
-          <h1 class="package-no">S1</h1>
-          <h4>0900-1000</h4>
-          <h5>Keynote by Steve J. Todd</h5>
-        </div>
-		</a>
-      </div>
-      <div class="col single-price">
-        <div class="top-part">
-          <h1 class="package-no">S2</h1>
-          <h4>1015-1215</h4>
-          <h5>Security and Data Operations</h5>
-        </div>
-      </div>
-      <div class="col single-price">
-        <div class="top-part">
-          <h1 class="package-no">S3</h1>
-          <h4>1315-1400</h4>
-          <h5>Keynote by Cormac J. Sreenan</h5>
-        </div>
-      </div>
-      <div class="col single-price">
-        <div class="top-part">
-          <h1 class="package-no">S4</h1>
-          <h4>1400-1500</h4>
-          <h5>Posters</h5>
-        </div>
-      </div>
-      <div class="col single-price">
-        <div class="top-part">
-          <h1 class="package-no">S5</h1>
-          <h4>1500-1700</h4>
-          <h5>CEC Architectures & Resource Management</h5>
         </div>
       </div>
     </div>
