--- a/index.html
+++ b/index.html
@@ -344,7 +344,9 @@
 	<b>CLEVER</b>: Collaborative edge-cLoud continuum and Embedded AI for a Visionary industry of thE futuRe <br>
 	<b>GLACIATION</b>: Green responsibLe privACy preservIng dAta operaTIONs <br>
 	<b>CloudSkin</b>: Adaptive virtualization for AI-enabled Cloud-edge Continuum <br>
-	<b>CAMEO</b>: Creating an Architecture for Manipulating Earth Observation data
+	<b>SmartEdge</b>: Semantic Low-code Programming Tools for Edge Intelligence <br>
+	<b>CAMEO</b>: Creating an Architecture for Manipulating Earth Observation data <br>
+	<b>AI for Edge</b>: The Future of Orchestration in the Computing Continuum
 	</p>
 
     <h5 class="text-gray text-center">1500-1700, Session 5: CEC Architectures & Resource Management </h5>
