--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         <br>
         <br>
         <h4><span class="lnr lnr-calendar-full"></span>October 10th, 2023</h4>
-        <h4><span class="lnr lnr-map"></span>  <a href="https://icnp23.cs.ucr.edu/" target="_blank">Co-located with IEEE ICNP'23 - Reykjavik, Iceland</a> </h4>
+        <h4><span class="lnr lnr-map"></span>  <a href="https://icnp23.cs.ucr.edu/" target="_blank">Hosted by IEEE ICNP'23</a> </h4>
+        <h3><span class="lnr lnr-location"></span>  <a href="https://www.icelandhotelcollectionbyberjaya.com/en/hotels/reykjavik/reykjavik-natura" target="_blank">Held at Reykjavik Natura-Berjaya Iceland</a> </h3>
       </div>
     </div>
   </div>
