--- a/index.html
+++ b/index.html
@@ -53,16 +53,13 @@
         <h1 class="text-white">
           CEC Workshop 2023
         </h1>
-        <h4 class="text-white">
-          Organized by: IEEE ICNP'23 - The 31st IEEE International Conference on Network Protocols
-        </h4>
+	<h4><span class="lnr lnr-map"></span>  <a href="https://icnp23.cs.ucr.edu/" target="_blank">Organized by: IEEE ICNP'23 - The 31st IEEE International Conference on Network Protocols</a> </h4>
         <h5 class="text-white">
           Supported by EU Commission and Dell Technologies
         </h5>
         <br>
         <br>
         <h4><span class="lnr lnr-calendar-full"></span>October 10th, 2023</h4>
-        <h4><span class="lnr lnr-map"></span>  <a href="https://icnp23.cs.ucr.edu/" target="_blank">Hosted by IEEE ICNP'23</a> </h4>
         <h3><span class="lnr lnr-location"></span>  <a href="https://www.icelandhotelcollectionbyberjaya.com/en/hotels/reykjavik/reykjavik-natura" target="_blank">Held at Reykjavik Natura-Berjaya Iceland</a> </h3>
       </div>
     </div>
