--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     <h5 class="text-gray text-center">1015-1215, Session 2: Security and Data Operations</h5>
     <p class="sample-text"><b>Session Chair</b>: Dr. Raúl Gracia-Tinedo</p>
     <p class="sample-text">
-	<b>1015-1035</b>: Towards Trust-based Data Weighting in Machine Learning <br>
+	<b>1015-1035</b>: Towards Trust-based Data Weighting in Machine Learning, Authors: Seán Óg Murphy & Cormac J. Sreenan & Utz Roedig (University College Cork), Ahmed Khalid (DELL Technologies) <br>
 	<b>1035-1055</b>: Architecture for Confidential Digital Asset Transfer on Blockchain through Obfuscation <br>
 	<b>1055-1115</b>: Semantic Programming for IoT-Edge-Cloud Continuum <br>
 	<b>1115-1135</b>: Augmented Reality Integration for Real-time Security and Maintenance in IoT-enabled Smart Campuses <br>
