--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 	<b>Authors</b>: Anastasios Nanos & Charalampos Mainas & George Ntoutsos (Nubificus Ltd, UK), Aristotelis Kretsis & Polyzois Soumplis & Panagiotis Kokkinos & Emmanouel Varvarigos (NTUA, Greece), Aggelos Ferikoglou & Dimitrios Danopoulos & Argyris Kokkinis & Dimosthenis Masouros & Kostas Siozios (Aristotle University of Thessaloniki, Greece), Juan Jose Vegas Olmos (NVIDIA Corporation, Israel) <br><br>
 	    
 	<b>1540-1600</b>: An AI Factory Digital Twin Deployed Within a High-Performance Edge Architecture <br>
-	<b>Authors</b>: Sean Ahearne & Ahmed Khalid (DELL Technologies), Martin Ron (Factorio Solutions, Prague, Czechia), Pavel Burget (Czech Technical University, Prague) <br><br>
+	<b>Authors</b>: Sean Ahearne & Ahmed Khalid (DELL Technologies), Martin Ron (Factorio Solutions, Prague), Pavel Burget (Czech Technical University, Prague) <br><br>
 	    
 	<b>1600-1620</b>: Is Performance of Object Storage Predictable for Serverless I/O Workloads? A Comparative Study <br>
 	<b>Authors</b>: Germán T. Eizaguirre & Marc Sánchez-Artigas (Universitat Rovira i Virgili)<br><br>
