--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 	<b>Authors</b>: Diego Carraro & Andrea Rossi & Andrea Visentin & Steven Prestwich & Kenneth N. Brown (University College Cork)<br><br>
 	    
 	<b>1640-1700</b>: An RL-based Model for Optimized Kubernetes Scheduling <br>
-	<b>Authors</b>: John Rothman & Javad Chamanara (L3S)<br><br>
+	<b>Authors</b>: John Rothman & Javad Chamanara (L3S, Hannover, Germany)<br><br>
 	    
 	</p>
 
