--- a/index.html
+++ b/index.html
@@ -54,14 +54,13 @@
           CEC Workshop 2023
         </h1>
 	<h4><a href="https://icnp23.cs.ucr.edu/" target="_blank">Organized by: IEEE ICNP'23 - The 31st IEEE International Conference on Network Protocols</a> </h4>
-        <h5 class="text-white">
-          Supported by EU Commission and Dell Technologies
-        </h5>
+        <h5 class="text-white"> Supported by EU Commission and Dell Technologies </h5>
+        <h5 class="text-white"> The papers will be published on IEEE Xplore as part of the ICNP proceedings </h5>
         <br>
         <br>
         <h4><span class="lnr lnr-calendar-full"></span>October 10th, 2023</h4>
 	<h4><span class="lnr lnr-map"></span> Reykjavik, Iceland </h4>
-        <h3><span class="lnr lnr-location"></span>  <a href="https://www.icelandhotelcollectionbyberjaya.com/en/hotels/reykjavik/reykjavik-natura" target="_blank">Held at Reykjavik Natura-Berjaya Iceland</a> </h3>
+        <h5><span class="lnr lnr-location"></span>  <a href="https://www.icelandhotelcollectionbyberjaya.com/en/hotels/reykjavik/reykjavik-natura" target="_blank">Held at Reykjavik Natura-Berjaya Iceland</a> </h5>
       </div>
     </div>
   </div>
