--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
         <h4 class="text-white"> The papers will be published on IEEE Xplore as part of the ICNP proceedings </h4>
         <br>
         <br>
-        <h4><span class="lnr lnr-calendar-full"></span>October 10th, 2023</h4>
-	<h4><span class="lnr lnr-map"></span> Reykjavik, Iceland </h4>
-        <h5><span class="lnr lnr-location"></span>  <a href="https://www.icelandhotelcollectionbyberjaya.com/en/hotels/reykjavik/reykjavik-natura" target="_blank">Held at Reykjavik Natura-Berjaya Iceland</a> </h5>
+        <h5><span class="lnr lnr-calendar-full"></span>October 10th, 2023</h5>
+        <h5><span class="lnr lnr-map"></span>  <a href="https://www.icelandhotelcollectionbyberjaya.com/en/hotels/reykjavik/reykjavik-natura" target="_blank">Held at Reykjavik Natura-Berjaya Iceland</a> </h5>
       </div>
     </div>
   </div>
