--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h4 class="text-white"> The papers will be published on IEEE Xplore as part of the ICNP proceedings </h4>
         <br>
         <br>
-        <h5><span class="lnr lnr-calendar-full"></span>October 10th, 2023</h5>
+        <h5 class="text-white"><span class="lnr lnr-calendar-full"></span>October 10th, 2023</h5>
         <h5><span class="lnr lnr-map"></span>  <a href="https://www.icelandhotelcollectionbyberjaya.com/en/hotels/reykjavik/reykjavik-natura" target="_blank">Held at Reykjavik Natura-Berjaya Iceland</a> </h5>
       </div>
     </div>
