--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </h1>
 	<h5><a href="https://icnp23.cs.ucr.edu/" target="_blank">Organized by: IEEE ICNP'23 - The 31st IEEE International Conference on Network Protocols</a> </h5>
         <h5 class="text-white"> Supported by EU Commission and Dell Technologies </h5>
-        <h4 class="text-white"> The papers will be published on IEEE Xplore as part of the ICNP proceedings </h4>
+        <h4> The papers will be published on IEEE Xplore as part of the ICNP proceedings </h4>
         <br>
         <br>
         <h5 class="text-white"><span class="lnr lnr-calendar-full"></span>October 10th, 2023</h5>
